--- a/.github/workflows/dependabot-alerts-to-slack.yml
+++ b/.github/workflows/dependabot-alerts-to-slack.yml
@@ -5,6 +5,20 @@ on:
     - cron: '30 16 * * *' # every day at 9:30 am PST
   workflow_dispatch: # to have the option to run this ad-hoc
   workflow_call: # to allow other workflows to call this workflow
+    secrets:
+      app-id: ${{ vars.DEPENDABOT_ACCESS_APP_ID }}
+      private-key: ${{ secrets.DEPENDABOT_ACCESS_PRIVATE_KEY }}
+      slack_webhook: ${{ secrets.CUSTOMER_INTEGRATIONS_SLACK_WEBHOOK }}
+
+      app-id:
+        required: true
+        description: 'Github App ID'
+      private-key:
+        required: true
+        description: 'Github App Private Key'
+      slack_webhook:
+        required: true
+        description: 'Slack Webhook'
 
 jobs:
   main:
@@ -13,12 +27,12 @@ jobs:
       - uses: actions/create-github-app-token@v1
         id: app-token
         with:
-          app-id: ${{ vars.DEPENDABOT_ACCESS_APP_ID }}
-          private-key: ${{ secrets.DEPENDABOT_ACCESS_PRIVATE_KEY }}
+          app-id: ${{ secrets.app-id }}
+          private-key: ${{ secrets.private-key }}
 
       # X.X.X - Latest version available at: https://github.com/kunalnagarco/action-cve/releases
       - uses: kunalnagarco/action-cve@v1.13.2
         with:
           token: ${{ steps.app-token.outputs.token }}
-          slack_webhook: ${{ secrets.CUSTOMER_INTEGRATIONS_SLACK_WEBHOOK }}
+          slack_webhook: ${{ secrets.slack_webhook }}
           count: 10
