--- a/.github/workflows/dependabot-alerts-to-slack.yml
+++ b/.github/workflows/dependabot-alerts-to-slack.yml
@@ -1,18 +1,15 @@
 name: 'Check for Dependabot alerts & send them to Slack'
 
 on:
-  schedule:
-    - cron: '30 16 * * *' # every day at 9:30 am PST
-  workflow_dispatch: # to have the option to run this ad-hoc
   workflow_call: # to allow other workflows to call this workflow
     secrets:
-      app-id:
+      github-app-id:
         required: true
         description: 'Github App ID'
-      private-key:
+      github-app-private-key:
         required: true
         description: 'Github App Private Key'
-      slack_webhook:
+      slack-webhook:
         required: true
         description: 'Slack Webhook'
 
@@ -23,12 +20,12 @@ jobs:
       - uses: actions/create-github-app-token@v1
         id: app-token
         with:
-          app-id: ${{ secrets.app-id }}
-          private-key: ${{ secrets.private-key }}
+          app-id: ${{ secrets.github-app-id }}
+          private-key: ${{ secrets.github-app-private-key }}
 
       # X.X.X - Latest version available at: https://github.com/kunalnagarco/action-cve/releases
       - uses: kunalnagarco/action-cve@v1.13.2
         with:
           token: ${{ steps.app-token.outputs.token }}
-          slack_webhook: ${{ secrets.slack_webhook }}
+          slack_webhook: ${{ secrets.slack-webhook }}
           count: 10
